# nopaste

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  logs.sh  pastes.db  pyproject.toml  release-please-config.json  requirements.txt  restart.sh  stop.sh
.github/workflows/: auto-merge-release.yml  ci.yml  dockerhub.yml  release-please.yml
src/: config.py  database.py  main.py
src/static/css/: style.css
src/templates/: base.html  index.html  list.html  paste.html
tests/: test_database.py  test_main.py
