[project]
name = "nopaste"
version = "1.0.0"
description = "API для простого nopaste приложения"
authors = [
    {name = "ascheglov05", email = "Andrey.Scheglov@bia-tech.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.0.3",
    "python-multipart==0.0.17",
    "httpx==0.27.2"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "black",
    "flake8",
    "mypy",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "UP"]
output-format = "gitlab"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --strict-markers"
norecursedirs = ["__pycache__", "dist", "build", ".venv"]
pythonpath = "src"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "__pycache__/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
