[project]
name = "nopaste"
version = "0.1.1"
description = "API для простого nopaste приложения"
authors = [
    {name = "ascheglov05", email = "Andrey.Scheglov@bia-tech.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.0.3",
    "python-multipart==0.0.17",
    "httpx==0.27.2"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5"
]

[tool.ruff]
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "ARG001", # unused arguments in functions
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers"
norecursedirs = ["__pycache__", "dist", "build", ".venv"]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "__pycache__/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
